--- a/Simple_AE.ipynb
+++ b/Simple_AE.ipynb
@@ -92,7 +92,7 @@
       ],
       "source": [
         "u_data=[]\n",
-        "path2 = 'C:/Users/Qasim Khan/Desktop/FYP/AE Dataset/unhealthy/unhealthy'\n",
+        "path2 = '/AE Dataset/unhealthy/unhealthy'\n",
         "files=os.listdir(path2)\n",
         "for i in tqdm(files):\n",
         "    img=cv2.imread(path2+'/'+i,0)   #Change 0 to 1 for color images\n",
