--- a/Simple_AE.ipynb
+++ b/Simple_AE.ipynb
@@ -66,7 +66,7 @@
       ],
       "source": [
         "data=[]\n",
-        "path1 = 'C:/Users/Qasim Khan/Desktop/FYP/AE Dataset/healthy/healthy'\n",
+        "path1 = '/AE Dataset/healthy/healthy'\n",
         "files=os.listdir(path1)\n",
         "for i in tqdm(files):\n",
         "    img=cv2.imread(path1+'/'+i,0)   #Change 0 to 1 for color images\n",
